<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">91家电培训系统</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_title">瑞欣源科技</string>
    <string name="app_key">8aURejZBbV659OkjgTXwFhMFRYEtlOGrGfpoZEpTz68LCd8kgUtU2jegLf1RwN</string>
    <string name="api_url">http://api.rxynet.com/index.php?r=api/</string>
    <string name="industry_type">2</string>
<!-- TabHost -->
    <string name="tab_one">Tab_One</string>
    <string name="tab_one_title">产品培训</string>
    <string name="tab_two">Tab_Two</string>
    <string name="tab_two_title">销售技巧</string>
    <string name="tab_three">Tab_Three</string>
    <string name="tab_three_title">验证效果</string>
    <string name="tab_four">Tab_Four</string>
    <string name="tab_four_title">查看更多</string>
<!-- LoginActivity -->
    <string name="username">用户名:</string>
    <string name="password">密码:</string>
    <string name="confirm">确认</string>
    <string name="concel">取消</string>
    <string name="prompt_user_not_exists">用户不存在或密码错误，请重新输入</string>
    <string name="prompt_user_exists">登陆成功</string>
<!-- TabOneActivity -->
    <string name="item_img_title">标题图片</string>
    <string name="item_button_comment">评论</string>
    <string name="item_prodution_default_intro">
        [2013年六月十四号发布了一款新产品，该产品很爽歪歪，电话无绳2013年六月十四号发布了一款新产品，该产品很爽歪歪，电话无绳2013年六月十四号发布了一款新产品，该产品很爽歪歪，电话无绳]
    </string>
    <string name="title_btn_latest">最新</string>
    <string name="title_btn_hottest">最热</string>
    <string name="title_btn_valued">精华</string>
    <string name="title_btn_history">历史</string>
    <string name="tabone_search_hint">请输入产品名称</string>
<!-- TabTwoActivity -->
    <string name="title_btn_sale_skill">销售技巧</string>
    <string name="title_btn_communicate_skill">沟通技巧</string>
    <string name="title_btn_service_skill">服务技巧</string>
    <string name="title_btn_psychological_knowledge">心理知识</string>
    <string name="tabtwo_search_hint">请输入销售技巧名称</string>
<!-- TabThreeActivity -->
    <string name="list_item_question_title">题目标题</string>
    <string name="list_item_question_content">题目内容</string>
    <string name="list_item_question_answer">点击查看答案</string>
    <string name="answer_dialog_title">答案</string>
    <string name="answer_dialog_content">内容</string>
    <string name="answer_dialog_got_it">我知道啦！</string>
<!-- ProductionDetailActivity -->
    <string name="detail">详情</string>
    <string name="comment_count">评论:</string>
    <string name="comment_hint">请在此输入评论内容。。。</string>
    <string name="upload_comment">提交</string>
    <string name="none_comment_content">请填写评论内容！</string>
<!-- Comment -->
    <string name="comment_avatar">评论用户头像</string>
    <string name="user_name">游客</string>
    <string name="comment_time">评论时间</string>
    <string name="comment_content">评论内容一大堆啊一大堆。。。。</string>
<!-- TabFourActivity -->
    <string name="app_recommend">精彩应用推荐</string>
    <string name="recommend_to_friend">推荐给朋友</string>
    <string name="feedback">意见反馈</string>
    <string name="update">检查版本更新</string>
    <string name="current_version">0.0.1</string>
    <string name="help">帮助</string>
    <string name="download_picture_way">自动下载图片</string>
    <string name="company_info">公司简介</string>
    <string name="telephone">联系电话</string>
    <string name="telephone_num">028 87686850</string>
    <string name="setting">设置</string>
    <string name="download_picture_method">下载方式</string>
    <string name="download_picture_method_default">1</string>
<!-- DownloadActivity -->
    <string name="path">下载路径</string>
    <string name="downloadbutton">下载</string>
    <string name="downloadUrl">http://api.rxynet.com/uploads/product/20130619/1306190614254c074591.jpg</string>
<!-- Searchable -->
    <string name="searchable_label">搜索标签</string>
    <string name="searchable_hint">搜索提示</string>
    <string name="search">搜索</string>
<!-- notification -->
    <string name="notification_tickertext">新消息</string>
<!-- message service -->
    <string name="net_connect_off">请打开网络链接</string>
    <string name="connectivity_action">Connectivity_action</string>
    <string name="no_wifi_prompt">去瑞欣源，这里有免费wifi哦</string>
    <string name="mode_no_pic">无图模式</string>
    <string name="mode_wifi">wifi模式</string>
    <string name="mode_net">手机网络模式</string>
<!-- sale_skill_detail -->
    <string name="sale_skill_detail_title">销售技巧标题</string>
    <string name="sale_skill_detail_content">销售技巧内容</string>
</resources>
