<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/setting">
    <Preference
         android:key=""
         android:layout="@layout/preference_none_bg"
     />
    <Preference
        android:key="@string/app_recommend"
        android:layout="@layout/setting_item_app_recommend"
        />
    <Preference
        android:key="@string/recommend_to_friend"
        android:layout="@layout/setting_item_remmend_to_friends"
        />
    <Preference
        android:key="@string/feedback"
        android:layout="@layout/setting_item_feedback"
        />
    <Preference
        android:key="@string/update"
        android:layout="@layout/setting_item_update"
        />
    <Preference
         android:key=""
         android:layout="@layout/preference_none_bg"
     />
    <Preference
        android:key="@string/help"
        android:layout="@layout/setting_item_help"/>
    <ListPreference
        android:key="@string/download_picture_way"
        android:title="@string/download_picture_way"
        android:layout="@layout/setting_item_download_pics"
        android:dialogTitle="@string/download_picture_method"
        android:entries="@array/list_net_state_option_entries"
        android:entryValues="@array/list_net_state_option_entries_value"
        android:defaultValue="@string/download_picture_method_default"
        />
    <Preference
        android:key="@string/company_info"
        android:layout="@layout/setting_item_company_info"
        />
    <Preference
        android:key="@string/telephone"
        android:layout="@layout/setting_item_telephone"
        />
    <Preference
         android:key=""
         android:layout="@layout/preference_none_bg"
     />
</PreferenceScreen>
