<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/item_textview_question_title"
        style="@style/TextView.commonColor"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_item_question_title"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/item_textview_question_content"
        style="@style/TextView.commonColor"
        android:layout_marginLeft="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/list_item_question_content" />

    <TextView
        android:id="@+id/item_textView_question_answer"
        style="@style/TextView.commonColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:gravity="right"
        android:textSize="12sp"
        android:text="@string/list_item_question_answer" />

</LinearLayout>
