<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/detail_item_tv_production_name"
            style="@style/TextView.commonColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/detail_item_tv_production_publish_date"
            style="@style/TextView.commonColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/detail_item_tv_production_name"
            android:layout_below="@+id/detail_item_tv_production_name"
            android:text="@string/hello_world"
            android:textSize="12sp" />
    </RelativeLayout>

    
    <ScrollView
        android:id="@+id/scrollview_detial_item_tv_production_intro"
        android:layout_below="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <TextView
            android:id="@+id/detail_item_tv_production_intro"
            style="@style/TextView.commonColor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_prodution_default_intro"
            android:textSize="15sp" />
    </ScrollView>

    <Gallery
        android:id="@+id/detail_item_gallery_prodution_pictures"
        android:layout_below="@+id/scrollview_detial_item_tv_production_intro"
        android:layout_width="fill_parent"
        android:layout_height="140dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <ScrollView
        android:id="@+id/detail_item_scrollview_production_intro_list"
        android:layout_below="@+id/detail_item_gallery_prodution_pictures"
        android:layout_width="fill_parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_height="170dp">
        <TextView
            android:id="@+id/detail_item_tv_production_intro_list"
            style="@style/TextView.commonColor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_prodution_default_intro"
            android:textSize="15sp" />
    </ScrollView>

    <TextView
        android:id="@+id/detail_comment_count"
        style="@style/TextView.commonColor"
        android:layout_width="fill_parent"
        android:layout_height="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/comment_title_bg"
        android:layout_below="@+id/detail_item_scrollview_production_intro_list"
        android:text="@string/comment_count"
        android:textSize="12sp" />
    <ListView
        android:id="@+id/detail_listview_comments_list"
        style="@style/TextView.commonColor"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:cacheColorHint="#00000000"
        android:layout_below="@+id/detail_comment_count"
        android:layout_above="@+id/detail_edittext_comment"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
    </ListView>

    <EditText
        android:id="@+id/detail_edittext_comment"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_alignParentBottom="true"
        android:ems="10"
        android:hint="@string/comment_hint" >
    </EditText>

    <Button
        android:id="@+id/buttonUploadComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/detail_listview_comments_list"
        android:layout_alignTop="@+id/detail_edittext_comment"
        android:background="@drawable/comment_write"
        android:text="@string/upload_comment" />

</RelativeLayout>