<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    <LinearLayout android:id="@+id/tabHostOne"
                  android:layout_marginBottom="@dimen/activity_vertical_margin"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:orientation="vertical">
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/app_name"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/tabHostTwo"
                  android:layout_marginBottom="@dimen/activity_vertical_margin"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:orientation="vertical"
                  android:layout_gravity="bottom">
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/hello_world"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/tabHostThree"
                  android:layout_marginBottom="@dimen/activity_vertical_margin"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:orientation="vertical"
                  android:layout_gravity="bottom">
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/action_settings"/>
    </LinearLayout>
</FrameLayout>
